@startuml Budget Management System

skinparam monochrome true

package "Budget Management System" {
    frame "MainForm" {
        class MainForm {
            +MainForm()
            -btnAddIncome_Click()
            -btnAddExpense_Click()
            -UpdateBudgetDisplay()
        }
    }

    MainForm --|> Form
}

@enduml

@startuml

left to right direction
skinparam packageStyle rectangle

actor User as "Пользователь"
rectangle "Система учета личных финансов" {
    usecase (Добавить транзакцию) as UC1
    usecase (Просмотреть отчет) as UC2
    User --> UC1
    User --> UC2
}

@enduml

@startuml

class Transaction {
    - Description: string
    - Amount: decimal
    - Category: Category
    - Type: TransactionType
    + RecordTransaction(): void
}

class Category {
    - Name: string
}

enum TransactionType {
    Income
    Expense
}

class User {
    - Username: string
    - Password: string
}

Transaction "1" *-- "1" Category
Transaction -- TransactionType
Transaction o-- "1" User

@enduml

@startuml

class MainForm {
    - transactions: List<Transaction>
    - categories: List<Category>
    - currentBalance: decimal
    + MainForm()
    + addTransactionButton_Click()
    + UpdateTransactionsGridView()
    + UpdeteCurrentBalance()
    + newCategoryButton_Click()
    + clearButton_Click()
}

class ManageCategoriesForm {
    - categories: List<Category>
    + ManageCategoriesForm(categories: List<Category>)
    + addCategoryButton_Click()
    + deleteCategoryButton_Click()
}

class Transaction {
    - Description: string
    - Amount: decimal
    - Category: Category
    - Type: TransactionType
    + Transaction(description: string, amount: decimal, category: Category, type: TransactionType)
}

class Category {
    - Name: string
    + Category(name: string)
}

enum TransactionType {
    Income
    Expense
}

MainForm "1" *-- "1..*" Transaction
MainForm "1" *-- "1..*" Category
ManageCategoriesForm "1" *-- "1..*" Category

@enduml
